Add skin configuration to minima theme

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,6 @@
 title: Kurdish Names Dictionary
 description: Privacy Policy for فەرهەنگی ناوی کوردی (Kurdish Names Dictionary) app
 theme: minima
+minima:
+  skin: classic
+
